--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,7 +8,7 @@
         "strictFunctionTypes": true
     },
     "exclude": [
-        "node_modules", "",
+        "node_modules",
         "**/node_modules/*"
     ]
 }
